# itmo-fp-lab-1

./: dune-project  lab1.opam  ocamlformat  readme.md
.github/workflows/: main.yml
lib/task14/: baseline.py  for.ml  inf.ml  module.ml  tailrec.ml
lib/task17/: baseline.py  dune  for.ml  inf.ml  map.ml  module.ml  rec.ml  tailrec.ml
test/: dune  test14.ml  test17.ml  tests.ml  utils.ml
